--- a/Instructions/Labs/M02_Lab02.md
+++ b/Instructions/Labs/M02_Lab02.md
@@ -1,4 +1,8 @@
-# Hands-on-Lab 2.2: Migrate master data to a new company
+---
+lab:
+    title: 'Lab01: Create and export a configuration package'
+    module: 'Module 2: Application Setup'
+---
 
 ## Exercise 1: Create and export a configuration package
 
